# raspISE

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_totp_secret_to_admin_users.py  b2c3d4e5f6g7_schema_reconciliation.py  bd6e57d105df_initial_schema.py
raspise/: __init__.py  cli.py  display_main.py  main.py
raspise/api/: __init__.py  auth.py  routes.py  schemas.py
raspise/auth/: ldap.py
raspise/config/: __init__.py  config.yaml
raspise/core/: __init__.py  events.py  logger.py  metrics.py  ratelimit.py  utils.py  webhooks.py
raspise/db/: __init__.py  database.py  models.py
raspise/display/: __init__.py  manager.py  screens.py
raspise/policy/: __init__.py  engine.py
raspise/portal/: __init__.py  app.py
raspise/portal/templates/: portal.html  success.html
raspise/profiler/: __init__.py  profiler.py
raspise/radius/: __init__.py  coa.py  dictionary  eap_tls.py  freeradius_routes.py  server.py
raspise/tacacs/: __init__.py  server.py
raspise/web/: __init__.py  app.py
raspise/web/static/css/: style.css
raspise/web/templates/: admin_users.html  auth_logs.html  base.html  command_sets.html  dashboard.html  devices.html  groups.html  guests.html  login.html  policies.html  radius_clients.html  sessions.html  settings.html  system.html  tacacs_clients.html  tacacs_logs.html  users.html  vlans.html
scripts/: install.sh  raspise.logrotate  setup_display.sh  setup_freeradius.sh  update.sh
systemd/: raspise-display.service  raspise.service
tests/: conftest.py  test_api_auth.py  test_config.yaml  test_policy_engine.py  test_tacacs_packets.py  test_utils.py
