[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspise"
version = "1.0.0"
description = "A Cisco ISE-like NAC/AAA server for Raspberry Pi Zero 2W"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["radius", "tacacs", "nac", "ise", "raspberry-pi", "network-access-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Networking",
]

[project.scripts]
raspise         = "raspise.main:main"
raspise-display = "raspise.display_main:main"
raspise-cli     = "raspise.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["raspise*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
